--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                      <div class="logo">
                         <div class="image-wrapper ng-star-inserted"><img alt="Logo" src="assets/logo-Burgerland-sin-fondo.png"></div>
                      </div>
+                     <h1>Burgerland</h1>
 					 <div class="ng-star-inserted"></div>
                      <div class="ng-star-inserted">
                         <p class="ng-star-inserted">
@@ -42,9 +43,6 @@
                <div class="content orderingDisabled">
                   <div class="content__view">
                      <app-menu class="ng-star-inserted">
-                           <div class="search-bar">
-                              <input type="text" id="searchInput" placeholder="Buscar productos por nombre" class="ng-pristine ng-valid ng-touched">
-                           </div>
                            <div class="product-categories">
                               <div class="product-categories__items">
                                  <div class="item ng-star-inserted">
@@ -93,7 +91,7 @@
                                        <p>Doble carne angus, queso cheddar, cebolla frita, tocino, salsa big tasty y bbq, acompañada de papas fritas crunch</p>
                                        <div class="badge badge--outline"><img src="assets/shop.svg" alt="Precio"><span>$5.400</span></div>
                                     </div>
-                                    <img src="assets/product-default.svg" alt="As Aleman" class="ng-star-inserted">
+                                    <img src="assets/photos/bruta.webp" alt="Hamburguesa Bruta" class="ng-star-inserted">
                                  </div>
                                  <div class="product ng-star-inserted">
                                     <div>
@@ -103,7 +101,7 @@
 </p>
                                        <div class="badge badge--outline"><img src="assets/shop.svg" alt="Precio"><span>$5.900</span></div>
                                     </div>
-                                    <img src="assets/product-default.svg" alt="As Chacarero" class="ng-star-inserted">
+                                    <img src="assets/photos/clasica.webp" alt="Hamburguesa Clasica" class="ng-star-inserted">
                                  </div>
                                  <div class="product ng-star-inserted">
                                     <div>
@@ -113,7 +111,7 @@
 </p>
                                        <div class="badge badge--outline"><img src="assets/shop.svg" alt="Precio"><span>$5.400</span></div>
                                     </div>
-                                    <img src="assets/product-default.svg" alt="As completo" class="ng-star-inserted">
+                                    <img src="assets/photos/peruana.webp" alt="Hamburguesa Peruana" class="ng-star-inserted">
                                  </div>
                                  <div class="product ng-star-inserted">
                                     <div>
@@ -123,7 +121,7 @@
 </p>
                                        <div class="badge badge--outline"><img src="assets/shop.svg" alt="Precio"><span>$5.900</span></div>
                                     </div>
-                                    <img src="assets/product-default.svg" alt="As Dinamico" class="ng-star-inserted">
+                                    <img src="assets/photos/mushroom.webp" alt="Hamburguesa Mushroom" class="ng-star-inserted">
                                  </div>
                                  <div class="product ng-star-inserted">
                                     <div>
@@ -132,7 +130,7 @@
                                        <p>Carne angus, doble queso cheddar, doble tocino y salsa big tasty, acompañadas de papas fritas crunch</p>
                                        <div class="badge badge--outline"><img src="assets/shop.svg" alt="Precio"><span>$5.600</span></div>
                                     </div>
-                                    <img src="assets/product-default.svg" alt="As Italiano" class="ng-star-inserted">
+                                    <img src="assets/photos/bacon.webp" alt="Hamburguesa bacon" class="ng-star-inserted">
                                  </div>
                                  <div class="product ng-star-inserted">
                                     <div>
@@ -141,7 +139,7 @@
                                        <p>Carne angus, cheddar, ensalada de zanahoria con repollo coleslaw, pepinillo y lactonesa, acompañadas de papas fritas crunch </p>
                                        <div class="badge badge--outline"><img src="assets/shop.svg" alt="Precio"><span>$5.700</span></div>
                                     </div>
-                                    <img src="assets/product-default.svg" alt="As Luco" class="ng-star-inserted">
+                                    <img src="assets/photos/fresh.webp" alt="Hamburguesas fresh" class="ng-star-inserted">
                                  </div>
                                  <div class="product ng-star-inserted">
                                     <div>
@@ -150,7 +148,7 @@
                                        <p>Carne angus, queso cheddar, pepinillo y salsa bug tasty, acompañadas de 200 grs de papas fritas crunch</p>
                                        <div class="badge badge--outline"><img src="assets/shop.svg" alt="Precio"><span>$4.500</span></div>
                                     </div>
-                                    <img src="https://images.deliveryhero.io/image/pedidosya/products/128ba27a-24ea-4608-ac49-89f516ee9cba.jpeg?quality=90&width=1008&webp=1&dpi=1.5" alt="As pollo solo" class="ng-star-inserted">
+                                    <img src="assets/photos/chesseburger.webp" alt="Hamburguesa cheese burger" class="ng-star-inserted">
                                  </div>
                               </div>
                               <h3 id="Vienesas" class="ng-star-inserted">Vienesas</h3>
@@ -162,7 +160,7 @@
                                        <p>Vienesa llanquihue con salsa de ají amarillo,salteada de tomates con cebolla morada, cilantro y papas al hilo</p>
                                        <div class="badge badge--outline"><img src="assets/shop.svg" alt="Precio"><span>$5.400</span></div>
                                     </div>
-                                    <img src="assets/product-default.svg" alt="As Aleman" class="ng-star-inserted"><!---->
+                                    <img src="assets/photos/vienesaperuana.webp" alt="Vienesa peruana" class="ng-star-inserted"><!---->
                                  </div>
                                  <div class="product ng-star-inserted">
                                     <div>
@@ -171,7 +169,7 @@
                                        <p>Vienesa llanquihue con cubos de tomate, palta, mayonesa de la casa</p>
                                        <div class="badge badge--outline"><img src="assets/shop.svg" alt="Precio"><span>$5.900</span></div>
                                     </div>
-                                    <img src="assets/product-default.svg" alt="As Chacarero" class="ng-star-inserted"><!---->
+                                    <img src="assets/product-default.svg" alt="Vienesa italiana" class="ng-star-inserted"><!---->
                                  </div>
                                  <div class="product ng-star-inserted">
                                     <div>
@@ -180,7 +178,7 @@
                                        <p>Vienesa llanquihue, con salsa americana, con cubos de tomates, palta y mayonesa de la casa</p>
                                        <div class="badge badge--outline"><img src="assets/shop.svg" alt="Precio"><span>$5.400</span></div>
                                     </div>
-                                    <img src="assets/product-default.svg" alt="As completo" class="ng-star-inserted"><!---->
+                                    <img src="assets/product-default.svg" alt="Vienesa dinámica" class="ng-star-inserted"><!---->
                                  </div>
                                  <!---->
                               </div>
@@ -189,11 +187,11 @@
                                  <div class="product ng-star-inserted">
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
-                                       <h4>Empanadas de queso </h4>
+                                       <h4>Empanadas de queso</h4>
                                        <p>Cinco empanadas</p>
                                        <div class="badge badge--outline"><img src="assets/shop.svg" alt="Precio"><span>$5.400</span></div>
                                     </div>
-                                    <img src="assets/product-default.svg" alt="As Aleman" class="ng-star-inserted"><!---->
+                                    <img src="assets/product-default.svg" alt="Empanadas de queso" class="ng-star-inserted"><!---->
                                  </div>
                                  <div class="product ng-star-inserted">
                                     <div>
@@ -202,7 +200,7 @@
                                        <p>Papas fritas 300 grs, carne, cebollin y bañado en exquisita salsa del</p>
                                        <div class="badge badge--outline"><img src="assets/shop.svg" alt="Precio"><span>$5.900</span></div>
                                     </div>
-                                    <img src="assets/product-default.svg" alt="As Chacarero" class="ng-star-inserted"><!---->
+                                    <img src="assets/photos/papasburgerland.webp" alt="Papas burgenland" class="ng-star-inserted"><!---->
                                  </div>
                                  <div class="product ng-star-inserted">
                                     <div>
@@ -211,7 +209,7 @@
                                        <p>Porción de 400 grs de exquisitas papas fritas</p>
                                        <div class="badge badge--outline"><img src="assets/shop.svg" alt="Precio"><span>$5.400</span></div>
                                     </div>
-                                    <img src="assets/product-default.svg" alt="As completo" class="ng-star-inserted"><!---->
+                                    <img src="assets/product-default.svg" alt="Papas fritas" class="ng-star-inserted"><!---->
                                  </div>
                                  <div class="product ng-star-inserted">
                                     <div>
@@ -220,7 +218,7 @@
                                        <p>10 aros de cebolla</p>
                                        <div class="badge badge--outline"><img src="assets/shop.svg" alt="Precio"><span>$5.900</span></div>
                                     </div>
-                                    <img src="assets/product-default.svg" alt="As Dinamico" class="ng-star-inserted"><!---->
+                                    <img src="assets/product-default.svg" alt="Aros de cebolla" class="ng-star-inserted"><!---->
                                  </div>
                                  <div class="product ng-star-inserted">
                                     <div>
@@ -229,7 +227,7 @@
                                        <p>Porción de 400 grs de papas fritas, bañadas en exquisita salsa cheddar.</p>
                                        <div class="badge badge--outline"><img src="assets/shop.svg" alt="Precio"><span>$5.600</span></div>
                                     </div>
-                                    <img src="assets/product-default.svg" alt="As Italiano" class="ng-star-inserted"><!---->
+                                    <img src="assets/product-default.svg" alt="Porción papas cheddar" class="ng-star-inserted"><!---->
                                  </div>
                                  <!---->
                               </div>
@@ -242,7 +240,7 @@
                                        <p>Exquisito helado artesanal 120 ml</p>
                                        <div class="badge badge--outline"><img src="assets/shop.svg" alt="Precio"><span>$5.400</span></div>
                                     </div>
-                                    <img src="assets/product-default.svg" alt="As Aleman" class="ng-star-inserted"><!---->
+                                    <img src="assets/photos/helado.webp" alt="Helado" class="ng-star-inserted"><!---->
                                  </div>
                                  <div class="product ng-star-inserted">
                                     <div>
@@ -251,7 +249,7 @@
                                        <p>Exquisito brownie de chocolate artesanal</p>
                                        <div class="badge badge--outline"><img src="assets/shop.svg" alt="Precio"><span>$5.900</span></div>
                                     </div>
-                                    <img src="assets/product-default.svg" alt="As Chacarero" class="ng-star-inserted"><!---->
+                                    <img src="assets/photos/brownie.webp" alt="Brownie" class="ng-star-inserted"><!---->
                                  </div>                                 <!---->
                               </div>
                               <h3 id="Bebidas" class="ng-star-inserted">Bebidas</h3>
@@ -263,7 +261,7 @@
                                        <p>Bebida 350ml</p>
                                        <div class="badge badge--outline"><img src="assets/shop.svg" alt="Precio"><span>$5.400</span></div>
                                     </div>
-                                    <img src="assets/product-default.svg" alt="As Aleman" class="ng-star-inserted"><!---->
+                                    <img src="assets/photos/lata.webp" alt="Bebida 350ml" class="ng-star-inserted"><!---->
                                  </div>
                                  <div class="product ng-star-inserted">
                                     <div>
@@ -272,7 +270,7 @@
                                        <p>Bebida 1.5l</p>
                                        <div class="badge badge--outline"><img src="assets/shop.svg" alt="Precio"><span>$5.900</span></div>
                                     </div>
-                                    <img src="assets/product-default.svg" alt="As Chacarero" class="ng-star-inserted"><!---->
+                                    <img src="assets/photos/coca.webp" alt="Bebida 1.5l" class="ng-star-inserted"><!---->
                                  </div>
                              
                                  <!---->
