--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
                      <div class="logo">
                         <div class="image-wrapper ng-star-inserted"><img alt="Logo" src="assets/logo-Burgerland-sin-fondo.png"></div>
                      </div>
-                     <h1>Burgerland</h1>
-					 <div class="ng-star-inserted"></div>
+                     <div class="ng-star-inserted">
+                        <h1>Burgerland</h1>
+                     </div>
+                     
                      <div class="ng-star-inserted">
                         <p class="ng-star-inserted">
 							<img src="assets/phone.svg" alt="Teléfono">
