fixing typo errors

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Hamburguesa cheese burger</h4>
-                                       <p>Carne angus, queso cheddar, pepinillo y salsa bug tasty, acompañadas de 200 grs de papas fritas crunch</p>
+                                       <p>Carne angus, queso cheddar, pepinillo y salsa big tasty, acompañadas de papas fritas crunch</p>
                                        <div class="badge badge--outline"><span>$5.500</span></div>
                                     </div>
                                     <img src="assets/photos/chesseburger.webp" alt="Hamburguesa cheese burger" class="ng-star-inserted">
@@ -224,8 +224,8 @@
                                  <div class="product ng-star-inserted">
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
-                                       <h4>Papas burgenland</h4>
-                                       <p>Papas fritas 300 grs, carne, cebollin y bañado en exquisita salsa del</p>
+                                       <h4>Papas burgerland</h4>
+                                       <p>Papas fritas 300 grs, carne, cebollin bañado en exquisita salsa cheddar</p>
                                        <div class="badge badge--outline"><span>$5.500</span></div>
                                     </div>
                                     <img src="assets/photos/papasburgerland.webp" alt="Papas burgenland" class="ng-star-inserted"><!---->
