--- a/index.html
+++ b/index.html
@@ -178,6 +178,24 @@
                                     </div>
                                     <img src="assets/photos/bruta.webp" alt="Hamburguesa Bruta Simple" class="ng-star-inserted">
                                  </div>
+                                 <div class="product ng-star-inserted">
+                                    <div>
+                                       <span class="badge badge--noStock">Sin Stock</span>
+                                       <h4>Hamburguesa The real big</h4>
+                                       <p>Doble Carne angus, lechuga, pepinillos, cebolla, salsa big mac, acompañadas de papas fritas crunch </p>
+                                       <div class="badge badge--outline"><span>$9.490</span></div>
+                                    </div>
+                                    <img src="assets/photos/real-big.jpeg" alt="Hamburguesa Real Big" class="ng-star-inserted">
+                                 </div>
+                                 <div class="product ng-star-inserted">
+                                    <div>
+                                       <span class="badge badge--noStock">Sin Stock</span>
+                                       <h4>Hamburguesa super bacon</h4>
+                                       <p>Triple carne angus, triple tocino, triple queso, cebolla y salsa burgerland, acompañadas de papas fritas crunch</p>
+                                       <div class="badge badge--outline"><span>$10.490</span></div>
+                                    </div>
+                                    <img src="assets/photos/super-bacon.jpeg" alt="Hamburguesa Super Bacon" class="ng-star-inserted">
+                                 </div>
                               </div>
                               <h3 id="Vienesas" class="ng-star-inserted">Vienesas</h3>
                               <div class="items orderingDisabled ng-star-inserted">
@@ -257,6 +275,15 @@
                                     </div>
                                     <img src="assets/product-default.svg" alt="Porción papas cheddar" class="ng-star-inserted"><!---->
                                  </div>
+                                 <div class="product ng-star-inserted">
+                                    <div>
+                                       <span class="badge badge--noStock">Sin Stock</span>
+                                       <h4>Nuggets</h4>
+                                       <p>Porción 10 nuggets.</p>
+                                       <div class="badge badge--outline"><span>$3.000</span></div>
+                                    </div>
+                                    <img src="assets/product-default.svg" alt="nuggets" class="ng-star-inserted"><!---->
+                                 </div>
                                  <!---->
                               </div>
                               <h3 id="Postres" class="ng-star-inserted">Postres</h3>
@@ -265,10 +292,10 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Helado</h4>
-                                       <p>Exquisito helado artesanal 120 ml</p>
-                                       <div class="badge badge--outline"><span>$3.000</span></div>
+                                       <p>Exquisito helado Vittore 460ml</p>
+                                       <div class="badge badge--outline"><span>$5.000</span></div>
                                     </div>
-                                    <img src="assets/photos/helado.webp" alt="Helado" class="ng-star-inserted"><!---->
+                                    <img src="assets/photos/vitore.jpeg" alt="Helado" class="ng-star-inserted"><!---->
                                  </div>
                                  <div class="product ng-star-inserted">
                                     <div>
