fix bruta simple error and adding mega bacon

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Hamburguesa Bruta Simple</h4>
-                                       <p>Carne angus y queso, acompañadas de papas fritas crunch</p>
+                                       <p>Carne angus, queso cheddar, cebolla frita, tocino, salsa big tasty y bbq, acompañada de papas fritas crunch</p>
                                        <div class="badge badge--outline"><span>$7.490</span></div>
                                     </div>
                                     <img src="assets/photos/bruta.webp" alt="Hamburguesa Bruta Simple" class="ng-star-inserted">
@@ -187,14 +187,14 @@
                                     </div>
                                     <img src="assets/photos/real-big.jpeg" alt="Hamburguesa Real Big" class="ng-star-inserted">
                                  </div>
-                                 <div class="product ng-star-inserted">
+                                  <div class="product ng-star-inserted">
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
-                                       <h4>Hamburguesa super bacon</h4>
+                                       <h4>Hamburguesa mega bacon</h4>
                                        <p>Triple carne angus, triple tocino, triple queso, cebolla y salsa burgerland, acompañadas de papas fritas crunch</p>
                                        <div class="badge badge--outline"><span>$10.490</span></div>
                                     </div>
-                                    <img src="assets/photos/super-bacon.jpeg" alt="Hamburguesa Super Bacon" class="ng-star-inserted">
+                                    <img src="assets/photos/super-bacon.jpeg" alt="Hamburguesa Mega Bacon" class="ng-star-inserted">
                                  </div>
                               </div>
                               <h3 id="Vienesas" class="ng-star-inserted">Vienesas</h3>
