--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Hamburguesa bacon</h4>
-                                       <p>Carne angus, doble queso cheddar, doble tocino y salsa big tasty, acompañadas de papas fritas crunch</p>
+                                       <p>Carne angus, doble queso cheddar, cebolla, doble tocino y salsa big tasty, acompañadas de papas fritas crunch</p>
                                        <div class="badge badge--outline"><span>$6.500</span></div>
                                     </div>
                                     <img src="assets/photos/bacon.webp" alt="Hamburguesa bacon" class="ng-star-inserted">
@@ -187,12 +187,22 @@
                                     </div>
                                     <img src="assets/photos/real-big.jpeg" alt="Hamburguesa Real Big" class="ng-star-inserted">
                                  </div>
+
                                   <div class="product ng-star-inserted">
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Hamburguesa mega bacon</h4>
                                        <p>Triple carne angus, triple tocino, triple queso, cebolla y salsa burgerland, acompañadas de papas fritas crunch</p>
                                        <div class="badge badge--outline"><span>$10.490</span></div>
+                                    </div>
+                                    <img src="assets/photos/super-bacon.jpeg" alt="Hamburguesa Mega Bacon" class="ng-star-inserted">
+                                 </div>
+                                 <div class="product ng-star-inserted">
+                                    <div>
+                                       <span class="badge badge--noStock">Sin Stock</span>
+                                       <h4>Hamburguesa super bacon</h4>
+                                       <p>Doble carne angus, doble tocino, doble queso, cebolla y salsa burgerland, acompañadas de papas fritas crunch</p>
+                                       <div class="badge badge--outline"><span>$$8.990</span></div>
                                     </div>
                                     <img src="assets/photos/super-bacon.jpeg" alt="Hamburguesa Mega Bacon" class="ng-star-inserted">
                                  </div>
