--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Hamburguesa Clasica</h4>
-                                       <p>Carne angus, doble queso cheddar, lechuga, tomate,cebolla en aro y salsa big tasty. acompañadas de papas fritas crunch
+                                       <p>Carne angus, doble queso cheddar, pepinillos, lechuga, tomate,cebolla en aro y salsa big tasty. acompañadas de papas fritas crunch
 </p>
                                        <div class="badge badge--outline"><span>$6.900</span></div>
                                     </div>
@@ -311,7 +311,6 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Brownie</h4>
-                                       <p>Exquisito brownie de chocolate artesanal</p>
                                        <div class="badge badge--outline"><span>$1.000</span></div>
                                     </div>
                                     <img src="assets/photos/brownie.webp" alt="Brownie" class="ng-star-inserted"><!---->
