--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Hamburguesa Bruta</h4>
-                                       <p>Doble carne angus, queso cheddar, cebolla frita, tocino, salsa big tasty y bbq, acompañada de papas fritas crunch</p>
+                                       <p>Doble carne angus, queso cheddar, aros de cebolla fritos, tocino, salsa big tasty y bbq, acompañada de papas fritas crunch</p>
                                        <div class="badge badge--outline"><span>$8.990</span></div>
                                     </div>
                                     <img src="assets/photos/bruta.webp" alt="Hamburguesa Bruta" class="ng-star-inserted">
@@ -106,7 +106,7 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Hamburguesa Clasica</h4>
-                                       <p>Carne angus, doble queso cheddar, pepinillos, lechuga, tomate,cebolla en aro y salsa big tasty. acompañadas de papas fritas crunch
+                                       <p>Carne angus, queso cheddar, pepinillos, lechuga, tomate, cebolla en cubos y salsa big tasty. acompañadas de papas fritas crunch
 </p>
                                        <div class="badge badge--outline"><span>$6.900</span></div>
                                     </div>
@@ -116,7 +116,7 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Hamburguesa Peruana</h4>
-                                       <p>Salsa de aji amarillo, carne de angus, salteado de tomates con cebolla morada, cilantro y papas al hilo, acompañadas de papas fritas crunch
+                                       <p>Salsa de ají amarillo, carne de angus, salteado de tomates con cebolla morada, cilantro y papas al hilo, acompañadas de papas fritas crunch
 </p>
                                        <div class="badge badge--outline"><span>$7.490</span></div>
                                     </div>
@@ -126,7 +126,7 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Hamburguesa Mushroom</h4>
-                                       <p>Carne angus, doble queso cheddar, cebolla grillada, champiñones grillados con mayonesa, acompañadas de papas fritas crunch
+                                       <p>Carne angus, queso cheddar, cebolla grillada, champiñones grillados con mayonesa, acompañadas de papas fritas crunch
 </p>
                                        <div class="badge badge--outline"><span>$6.990</span></div>
                                     </div>
@@ -136,19 +136,10 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Hamburguesa bacon</h4>
-                                       <p>Carne angus, doble queso cheddar, cebolla, doble tocino y salsa big tasty, acompañadas de papas fritas crunch</p>
+                                       <p>Carne angus, queso cheddar, cebolla, doble tocino y salsa big tasty, acompañadas de papas fritas crunch</p>
                                        <div class="badge badge--outline"><span>$6.500</span></div>
                                     </div>
                                     <img src="assets/photos/bacon.webp" alt="Hamburguesa bacon" class="ng-star-inserted">
-                                 </div>
-                                 <div class="product ng-star-inserted">
-                                    <div>
-                                       <span class="badge badge--noStock">Sin Stock</span>
-                                       <h4>Hamburguesas fresh</h4>
-                                       <p>Carne angus, cheddar, ensalada de zanahoria con repollo coleslaw, pepinillo y lactonesa, acompañadas de papas fritas crunch </p>
-                                       <div class="badge badge--outline"><span>$6.990</span></div>
-                                    </div>
-                                    <img src="assets/photos/fresh.webp" alt="Hamburguesas fresh" class="ng-star-inserted">
                                  </div>
                                  <div class="product ng-star-inserted">
                                     <div>
@@ -163,7 +154,7 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Hamburguesa Kids</h4>
-                                       <p>Carne angus y queso, acompañadas de papas fritas crunch</p>
+                                       <p>Carne angus y queso cheddar, acompañadas de papas fritas crunch</p>
                                        <div class="badge badge--outline"><span>$5.000</span></div>
                                     </div>
                                     <img src="assets/photos/kids.webp" alt="Hamburguesa Kids" class="ng-star-inserted">
@@ -172,7 +163,7 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Hamburguesa Bruta Simple</h4>
-                                       <p>Carne angus, queso cheddar, cebolla frita, tocino, salsa big tasty y bbq, acompañada de papas fritas crunch</p>
+                                       <p>Carne angus, queso cheddar, aros de cebolla fritos, tocino, salsa big tasty y bbq, acompañada de papas fritas crunch</p>
                                        <div class="badge badge--outline"><span>$7.490</span></div>
                                     </div>
                                     <img src="assets/photos/bruta.webp" alt="Hamburguesa Bruta Simple" class="ng-star-inserted">
@@ -181,7 +172,7 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Hamburguesa The real big</h4>
-                                       <p>Doble Carne angus, lechuga, pepinillos, cebolla, salsa big mac, acompañadas de papas fritas crunch </p>
+                                       <p>Doble Carne angus, queso cheddar, lechuga, pepinillos, cebolla, salsa big mac, acompañadas de papas fritas crunch </p>
                                        <div class="badge badge--outline"><span>$9.490</span></div>
                                     </div>
                                     <img src="assets/photos/real-big.jpeg" alt="Hamburguesa Real Big" class="ng-star-inserted">
@@ -191,7 +182,7 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Hamburguesa mega bacon</h4>
-                                       <p>Triple carne angus, triple tocino, triple queso, cebolla y salsa burgerland, acompañadas de papas fritas crunch</p>
+                                       <p>Triple carne angus, triple tocino, triple queso cheddar, cebolla y salsa burgerland, acompañadas de papas fritas crunch</p>
                                        <div class="badge badge--outline"><span>$10.490</span></div>
                                     </div>
                                     <img src="assets/photos/super-bacon.jpeg" alt="Hamburguesa Mega Bacon" class="ng-star-inserted">
@@ -200,7 +191,7 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Hamburguesa super bacon</h4>
-                                       <p>Doble carne angus, doble tocino, doble queso, cebolla y salsa burgerland, acompañadas de papas fritas crunch</p>
+                                       <p>Doble carne angus, doble tocino, queso cheddar, cebolla y salsa burgerland, acompañadas de papas fritas crunch</p>
                                        <div class="badge badge--outline"><span>$8.990</span></div>
                                     </div>
                                     <img src="assets/photos/super-bacon.jpeg" alt="Hamburguesa Mega Bacon" class="ng-star-inserted">
@@ -209,7 +200,7 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Hamburguesa clasica supreme</h4>
-                                       <p>Supremitas de pollo, lechuga, tomate, pepinillos cebolla y big tasty</p>
+                                       <p>Supremitas de pollo, lechuga, tomate, pepinillos cebolla y big tasty acompañadas de papas fritas crunch</p>
                                        <div class="badge badge--outline"><span>$4.990</span></div>
                                     </div>
                                     <img src="assets/photos/clasica_supreme.jpeg" alt="Hamburguesa Mega Bacon" class="ng-star-inserted">
@@ -218,7 +209,7 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Hamburguesa chesse supreme</h4>
-                                       <p>Supremitas de pollo, pepinillos, queso cheddar y salsa big tasty</p>
+                                       <p>Supremitas de pollo, pepinillos, queso cheddar y salsa big tasty acompañadas de papas fritas crunch</p>
                                        <div class="badge badge--outline"><span>$4.990</span></div>
                                     </div>
                                     <img src="assets/photos/chesse_supreme.jpeg" alt="Hamburguesa Mega Bacon" class="ng-star-inserted">
@@ -256,7 +247,7 @@
                                  <div class="product ng-star-inserted">
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
-                                       <h4>Vienesa clasica XL</h4>
+                                       <h4>Vienesa italiana XL</h4>
                                        <p>Doble vienesa llanquihue, tomate, palta y mayonesa de la casa</p>
                                        <div class="badge badge--outline"><span>$3.000</span></div>
                                     </div>
@@ -288,7 +279,7 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Papas bacon tasty</h4>
-                                       <p>Papas fritas con tocino picado y salsa bigtasty</p>
+                                       <p>Papas fritas con tocino picado y salsa Big Tasty.</p>
                                        <div class="badge badge--outline"><span>$2.490</span></div>
                                     </div>
                                     <img src="assets/photos/papas_tasty.jpeg" alt="Empanadas de queso" class="ng-star-inserted"><!---->
@@ -316,7 +307,7 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Papas burgerland</h4>
-                                       <p>Papas fritas 300 grs, carne, cebollin bañado en exquisita salsa cheddar</p>
+                                       <p>Papas fritas 300 g, carne, cebollín bañado en exquisita salsa cheddar.</p>
                                        <div class="badge badge--outline"><span>$5.500</span></div>
                                     </div>
                                     <img src="assets/photos/papasburgerland.webp" alt="Papas burgenland" class="ng-star-inserted"><!---->
